--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,78 @@
+name: cpp-mingw-prebuilt-release-actions-workflow
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'c*'
+      
+permissions:
+    contents: write
 
-package=git
-version=2.17.0
+jobs:
+  build:
+    strategy:
+      matrix:
+        compiler:
+        - {
+            name: "x86_64-8.1.0-release-posix-seh-rt_v6-rev0",
+            url: "https://github.com/dirkarnez/cpp-tools/raw/main/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z"
+          }
+        - {
+            name: "winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64-9.0.0-r1",
+            url: "https://github.com/brechtsanders/winlibs_mingw/releases/download/11.2.0-12.0.1-9.0.0-r1/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64-9.0.0-r1.zip"
+          }
+        # - {
+        #     name: "msvc2019"
+        #   }
+    runs-on: windows-latest
+    env:
+      libraryName: git
+      version: 2.17.0
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install MSYS2
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          install: make autoconf automake libtool autogen perl
+          
+      - name: download compiler
+        if: ${{  matrix.compiler.url }}
+        shell: cmd
+        run: |
+          curl ${{ matrix.compiler.url }} -L --output compiler &&^
+          7z.exe x compiler
+          
+      - name: curl PortableGit-2.38.1-64-bit.7z.exe
+        shell: cmd
+        run:  curl https://github.com/git-for-windows/git/releases/download/v2.38.1.windows.1/PortableGit-2.38.1-64-bit.7z.exe -L --output PortableGit-2.38.1-64-bit.7z.exe && dir && 7z.exe x PortableGit-2.38.1-64-bit.7z.exe -o"${{ github.workspace }}\PortableGit-2.38.1-64-bit"
 
-tarUrl=https://mirrors.edge.kernel.org/pub/software/scm/git/$package-$version.tar.gz
-install(){
-   ./configure --prefix=$HOME
-   LDFLAGS="-L$HOME/lib" CFLAGS="-I$HOME/include" make -j 2
-   make install
-}
-if [ -e $package-$version.tar.gz ]; then
-   echo "cache"
-else
-   wget --no-check-certificate ${tarUrl}
-   tar -xvf $package-$version.tar.gz
-fi
-cd ./$package-$version
-install
+      - name: set PATH, check mingw version, cmake generate, build and install
+        shell: msys2 {0}
+        run: |
+            workspace=$(pwd) && \
+            export PATH="$workspace/mingw64:$workspace/mingw64/bin:$workspace/PortableGit-2.38.1-64-bit:$workspace/PortableGit-2.38.1-64-bit/bin:$workspace/msys64/usr/bin:/usr/bin" &&  \
+            wget --no-check-certificate https://mirrors.edge.kernel.org/pub/software/scm/git/${{ env.libraryName }}-${{ env.version }}.tar.gz && \
+            tar -xvf ${{ env.libraryName }}-${{ env.version }}.tar.gz && \
+            cd ${{ env.libraryName }}-${{ env.version }} && \
+            g++ --version &&  \
+            ./configure --help && \
+            ./configure --prefix="$(pwd)/${{ env.installationPath }}"  && \
+            LDFLAGS="-L$HOME/lib" CFLAGS="-I$HOME/include" make -j 2 && \
+            make install
+         
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          directory: "${{ env.libraryName }}-${{ env.version }}/${{ env.installationPath }}"
+          filename: "${{ env.libraryName }}-${{ github.ref_name }}-${{ matrix.compiler.name }}.zip"
+        
+      - name: Release prebuilt
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "${{ env.libraryName }}-${{ env.version }}/${{ env.installationPath }}/${{ env.libraryName }}-${{ github.ref_name }}-${{ matrix.compiler.name }}.zip"
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
